# la_chatte

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: .env  create_fastapi_app.py  main.py  parser.py
src/CRUD/: films.py
src/api/api_v1/: __init__.py
src/api/api_v1/pub/: films.py
src/core/: config.py
src/core/models/: __init__.py  db_helper.py  films.py
src/core/schemas/: films.py
src/frontend/: __init__.py  views.py
src/migrations/versions/: 83d0702c5ffa_create_film_s_model.py
src/static/css/: style.css
src/static/html/: index.html
src/static/js/: load_films.js
