[tool.poetry]
name = "la-chatte"
version = "0.1.0"
description = ""
authors = ["cnwv <115669384+cnwv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic-settings = "^2.5.2"
aiohttp = "^3.10.10"
beautifulsoup4 = "^4.12.3"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
uvicorn = "^0.32.0"
orjson = "^3.10.7"
jinja2 = "^3.1.4"
lxml = "^5.3.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
